# mcpward-sdk

./: .gitignore  README.md
examples/: agentkit_example.py  cursor_mcp.json
python/: README.md  pyproject.toml
python/mcpward_sdk/: __init__.py  client.py
python/tests/: test_client.py
schemas/: audit_log_v1.json
tools/: README.md  pyproject.toml
tools/mcpward_verify/: __init__.py  __main__.py
typescript/: README.md  package.json
typescript/src/: index.ts
