[project]
name = "mcpward-sdk"
version = "0.1.0"
description = "Python client SDK for the mcpward MCP gateway."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpward_sdk"]
