[project]
name = "mcpward-sdk"
version = "0.1.0"
description = "Python client SDK for the mcpward MCP gateway."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "David Bellaiche" }]
keywords = ["mcp", "mcpward", "gateway", "sdk", "agent", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://mcpward.redfleet.fr"
Repository = "https://github.com/dbe006/mcpward-sdk"
Issues = "https://github.com/dbe006/mcpward-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpward_sdk"]
