[project]
name = "mcpward-verify"
version = "0.1.0"
description = "Stand-alone CLI to verify Ed25519-signed audit log records from mcpward gateway."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "David Bellaiche" }]
keywords = ["mcp", "mcpward", "audit", "ed25519", "signature", "verifier"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=43.0",
]

[project.urls]
Homepage = "https://mcpward.redfleet.fr"
Repository = "https://github.com/dbe006/mcpward-sdk"

[project.scripts]
mcpward-verify = "mcpward_verify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcpward_verify"]
